Add game area structure to Html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,17 @@ body {
 #logo { 
     font-family: 'Finger Paint', sans-serif;
     font-size: 45px;
-    color: #e2687d;
+    color: #2fd49d;
     text-align: center;
+}
+.game-area {
+    width: 90%;
+    height: 70vh;
+    max-width: 800px;
+    max-height: fit-content;
+    background-color: rgb(241, 247, 246);
+    border: solid 2px #2fd49d;
+    border-radius: 1%;
+    margin: 0 auto;
+
 }
