--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,21 @@ body {
     font-size: 2rem;
     text-transform: uppercase;
 }
-
+p {
+    font-family: 'Poiret One';
+    font-size: 1rem;
+    padding-left: 10px;
+    padding-right: 10px;
+    line-height: 20px;
+}
 h2 {
     text-align: center;
-   
     font-size: 1.8rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+
 }
 #logo { 
     font-family: 'Nosifer', sans-serif;
