--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    border: none;
+}
+
 body {
     font-family: 'Codystar', sans-serif;
     font-size: 2rem;
@@ -17,11 +22,16 @@ p {
 h2 {
     text-align: center;
     font-size: 1.8rem;
+    padding-bottom: 5px;
 }
 
 h3 {
     font-size: 1.5rem;
+}
 
+footer {
+    background-color: #8553c0;
+    text-align: center;
 }
 
 img {
@@ -36,22 +46,22 @@ img {
 }
 
 .game-area {
-    height: 125vh;
-    max-width: 70%;
+    height: 700px;
+    max-width: 55%;
     background-color: rgb(241, 247, 246);
     border: solid 2px #8553c0;
     border-radius: 1%;
     margin: 0 auto;
-
+    position: relative;
 }
 
-.memory-container {
+.container-1 {
+    position: absolute;
     display: flex;
-    flex-wrap: wrap;
-    height: 50%;
-    width: 100%;
-    margin: 0 auto;
-    perspective: 1000px;
+    /* makes container a flexbox*/
+    flex-flow: row wrap;
+    height: fit-content;
+    text-align: center;
 }
 
 .memory-card {
@@ -117,22 +127,66 @@ img {
 
 /* W3 SCHOOLS */
 
+#reset-button {
+    height: 50px;
+    width: 160px;
+    background-color: rgb(241, 247, 246);
+    border: solid 2px #8553c0;
+    border-radius: 3%;
+    font-family: 'Codystar', sans-serif;
+    font-size: 17px;
+    text-transform: uppercase;
+}
+
+.reset-button:hover {
+    border: solid 3px #8553c0;
+}
+
+.reset-button:active {
+    border: solid 3px #8553c0;
+}
+
+.center {
+    margin-top: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 .result-area {
     text-align: center;
+    margin-top: 10px;
+}
+.result-area {
+    text-align: center;
+    margin-top: 10px;
 }
 
-/* Media Queries 1200px */
-@media screen and (max-width: 1200px) {
-    .game-area {
-        height: 120vh;
-        max-width: 70%;
+.fa {
+    text-decoration: none;
+    color: rgb(241, 247, 246);
+    margin: 30px;
+}
+
+/* Media Queries 1099px */
+@media screen and (max-width: 1099px) {
+    .memory-card {
+        height: 180px;
+        width: 180px;
     }
 
-    .memory-container {
-        height: 0;
+    .flip-card img {
+        width: 180px;
+        height: 180px;
     }
 
+    .flip-card {
+        width: 180px;
+        height: 180px;
+    }
+}
+
+/* Media Queries 974px */
+@media screen and (max-width: 974px) {
     .memory-card {
         height: 150px;
         width: 150px;
@@ -149,22 +203,34 @@ img {
     }
 }
 
-/* Media Queries 950px */
-@media screen and (max-width: 950px) {
+/* Media Queries 820px */
+@media screen and (max-width: 820px) {
     .game-area {
-        height: 100vh;
+        height: 110vh;
+        max-width: 80%;
+    }
+}
+
+/* Media Queries 615px */
+@media screen and (max-width: 615px) {
+    .game-area {
+        height: 110vh;
+        max-width: 100%;
+    }
+}
+
+/* Media Queries 500px */
+@media screen and (max-width: 500px) {
+    #logo {
+        font-size: 30px;
     }
 
-    #logo {
-        font-size: 35px;
+    h2 {
+        font-size: 18px;
     }
 
     p {
-        font-size: 0.7rem;
-    }
-
-    .game-area {
-        height: 100vh;
+        font-size: 14px;
     }
 
     .memory-card {
@@ -178,17 +244,17 @@ img {
     }
 
     .flip-card {
-        background-color: transparent;
         width: 120px;
         height: 120px;
     }
-}
 
-/* Media Queries 765px */
-@media screen and (max-width: 765px) {
     .game-area {
         height: 90vh;
     }
+}
+
+/* Media Queries 405px */
+@media screen and (max-width: 405px) {
 
     .memory-card {
         height: 100px;
@@ -201,55 +267,25 @@ img {
     }
 
     .flip-card {
-        background-color: transparent;
         width: 100px;
         height: 100px;
     }
 }
 
-/* Media Queries 650px */
-@media screen and (max-width: 650px) {
-    .memory-card {
-        height: 90px;
-        width: 90px;
+/* Media Queries 342px */
+@media screen and (max-width: 342px) {
+    #logo {
+        font-size: 20px;
     }
 
-    .flip-card img {
-        width: 90px;
-        height: 90px;
+    h2 {
+        font-size: 15px;
     }
 
-    .flip-card {
-        background-color: transparent;
-        width: 90px;
-        height: 90px;
-    }
-}
-
-/* Media Queries 580px */
-@media screen and (max-width: 580px) {
-    .game-area {
-        max-width: 95%;
+    p {
+        font-size: 10px;
     }
 
-    .memory-card {
-        height: 100px;
-        width: 100px;
-    }
-
-    .flip-card img {
-        width: 100px;
-        height: 100px;
-    }
-
-    .flip-card {
-        background-color: transparent;
-        width: 100px;
-        height: 100px;
-    }
-}
-
-@media screen and (max-width: 475px) {
     .memory-card {
         height: 80px;
         width: 80px;
@@ -261,31 +297,25 @@ img {
     }
 
     .flip-card {
-        background-color: transparent;
         width: 80px;
         height: 80px;
     }
 }
 
-/* Media Queries 350px */
-@media screen and (max-width: 350px) {
-    .game-area {
-        max-width: 100%;
-    }
-
+/* Media Queries 285px */
+@media screen and (max-width: 285px) {
     .memory-card {
-        height: 65px;
-        width: 65px;
+        height: 70px;
+        width: 70px;
     }
 
     .flip-card img {
-        width: 65px;
-        height: 65px;
+        width: 70px;
+        height: 70px;
     }
 
     .flip-card {
-        background-color: transparent;
-        width: 65px;
-        height: 65px;
+        width: 70px;
+        height: 70px;
     }
 }
