--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ img {
 
 .game-area {
     height: 750px;
-    max-width: 60%;
+    max-width: 800px;
     background-color: rgb(241, 247, 246);
     border: solid 2px #8553c0;
     border-radius: 1%;
@@ -191,10 +191,12 @@ img {
     margin: 30px;
 }
 
+
+
 /* Media Queries 1099px */
 @media screen and (max-width: 1099px) {
     .game-area {
-        height: 110vh;
+        height: 750px;
         max-width: 70%;
     }
     .memory-card {
@@ -226,12 +228,12 @@ img {
 @media screen and (max-width: 820px) {
     .game-area {
         height: 110vh;
-        max-width: 80%;
+        max-width: 90%;
     }
 }
 
-/* Media Queries 615px */
-@media screen and (max-width: 615px) {
+/* Media Queries 650px */
+@media screen and (max-width: 650px) {
     .game-area {
         height: 110vh;
         max-width: 100%;
