--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,11 +192,9 @@ img {
 }
 
 
-
 /* Media Queries 1099px */
 @media screen and (max-width: 1099px) {
     .game-area {
-        height: 750px;
         max-width: 70%;
     }
     .memory-card {
@@ -219,7 +217,6 @@ img {
 /* Media Queries 974px */
 @media screen and (max-width: 974px) {
     .game-area {
-        height: 110vh;
         max-width: 80%;
     }
 }
@@ -227,7 +224,7 @@ img {
 /* Media Queries 820px */
 @media screen and (max-width: 820px) {
     .game-area {
-        height: 110vh;
+        height: 800px;
         max-width: 90%;
     }
 }
@@ -235,13 +232,13 @@ img {
 /* Media Queries 650px */
 @media screen and (max-width: 650px) {
     .game-area {
-        height: 110vh;
         max-width: 100%;
-    }
+        height: 700px;
+        }
 }
 
-/* Media Queries 500px */
-@media screen and (max-width: 500px) {
+/* Media Queries 580px */
+@media screen and (max-width: 580px) {
     #logo {
         font-size: 30px;
     }
@@ -252,7 +249,6 @@ img {
     p {
         font-size: 14px;
     }
-
     .memory-card {
         height: 120px;
         width: 120px;
@@ -269,18 +265,43 @@ img {
     }
 
     .game-area {
-        height: 90vh;
+        height: 600px;
+        max-width: 80%;
     }
 }
-
+/* Media Queries 500px */
+@media screen and (max-width: 500px) {
+    .game-area {
+        max-width: 100%;
+    }
+}
 /* Media Queries 405px */
 @media screen and (max-width: 405px) {
     .game-area {
         max-width: 80%;
     }
+    .memory-card {
+        height: 80px;
+        width: 80px;
+    }
+
+    .flip-card img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .flip-card {
+        width: 80px;
+        height: 80px;
+    }
 }
+
 /* Media Queries 342px */
 @media screen and (max-width: 342px) {
+    .game-area {
+        max-width: 100%;
+        height: 500px
+    }
     #logo {
         font-size: 20px;
     }
@@ -292,25 +313,12 @@ img {
     p {
         font-size: 10px;
     }
-
-    .memory-card {
-        height: 80px;
-        width: 80px;
-    }
-
-    .flip-card img {
-        width: 80px;
-        height: 80px;
-    }
-
-    .flip-card {
-        width: 80px;
-        height: 80px;
-    }
 }
+    
 
 /* Media Queries 285px */
 @media screen and (max-width: 285px) {
+   
     .memory-card {
         height: 70px;
         width: 70px;
