--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* General */
+
 * {
     margin: 0;
     border: none;
@@ -22,20 +24,13 @@ h2 {
     text-align: center;
     font-size: 1.8rem;
     padding-bottom: 5px;
+    padding-top: 10px;
 }
 
 h3 {
     font-size: 1.5rem;
 }
 
-footer {
-    background-color: #8553c0;
-    text-align: center;
-}
-footer {
-    background-color: #8553c0;
-    text-align: center;
-}
 img {
     width: 100px;
 }
@@ -47,8 +42,9 @@ img {
     text-align: center;
 }
 
+/* Game */
 .game-area {
-    height: 750px;
+    height: 700px;
     max-width: 800px;
     background-color: rgb(241, 247, 246);
     border: solid 2px #8553c0;
@@ -66,7 +62,6 @@ img {
     text-align: center;
 }
 
-
 .memory-card {
     height: calc(50% - 4%);
     width: calc(25% - 4%);
@@ -79,7 +74,6 @@ img {
 }
 
 /* W3 SCHOOLS */
-
 .flip-card {
     background-color: transparent;
     width: 200px;
@@ -127,21 +121,21 @@ img {
     object-fit: cover;
 }
 
+/* Button */
 #reset-button {
     height: 50px;
     width: 160px;
     background-color: rgb(241, 247, 246);
     border: solid 2px #8553c0;
-    border-radius: 3%;
-    
+    border-radius: 3%; 
     font-family: 'Codystar', sans-serif;
     font-size: 17px;
     text-transform: uppercase;
 }
-.reset-button:hover {
+#reset-button:hover {
     border: solid 3px #8553c0;
 }
-.reset-button:active {
+#reset-button:active {
     border: solid 3px #8553c0;
 }
 .center {
@@ -149,48 +143,17 @@ img {
     text-align: center;
     margin-bottom: 20px;
 }
-/* W3 SCHOOLS */
 
-#reset-button {
-    height: 50px;
-    width: 160px;
-    background-color: rgb(241, 247, 246);
-    border: solid 2px #8553c0;
-    border-radius: 3%;
-    font-family: 'Codystar', sans-serif;
-    font-size: 17px;
-    text-transform: uppercase;
-}
-
-.reset-button:hover {
-    border: solid 3px #8553c0;
-}
-
-.reset-button:active {
-    border: solid 3px #8553c0;
-}
-
-.center {
-    margin-top: 10px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.result-area {
-    text-align: center;
-    margin-top: 10px;
-}
-.result-area {
-    text-align: center;
-    margin-top: 10px;
-}
-
+/* Footer */
 .fa {
     text-decoration: none;
     color: rgb(241, 247, 246);
     margin: 30px;
 }
-
+footer {
+    background-color: #8553c0;
+    text-align: center;
+}
 
 /* Media Queries 1099px */
 @media screen and (max-width: 1099px) {
@@ -224,7 +187,7 @@ img {
 /* Media Queries 820px */
 @media screen and (max-width: 820px) {
     .game-area {
-        height: 800px;
+        height: 700px;
         max-width: 90%;
     }
 }
@@ -233,7 +196,7 @@ img {
 @media screen and (max-width: 650px) {
     .game-area {
         max-width: 100%;
-        height: 700px;
+        height: 650px;
         }
 }
 
@@ -242,7 +205,6 @@ img {
     #logo {
         font-size: 30px;
     }
-
     h2 {
         font-size: 18px;
     }
@@ -253,19 +215,16 @@ img {
         height: 120px;
         width: 120px;
     }
-
     .flip-card img {
         width: 120px;
         height: 120px;
     }
-
     .flip-card {
         width: 120px;
         height: 120px;
     }
-
     .game-area {
-        height: 600px;
+        height: 550px;
         max-width: 80%;
     }
 }
@@ -284,12 +243,10 @@ img {
         height: 80px;
         width: 80px;
     }
-
     .flip-card img {
         width: 80px;
         height: 80px;
     }
-
     .flip-card {
         width: 80px;
         height: 80px;
@@ -300,16 +257,14 @@ img {
 @media screen and (max-width: 342px) {
     .game-area {
         max-width: 100%;
-        height: 500px
+        height: 450px
     }
     #logo {
         font-size: 20px;
     }
-
     h2 {
         font-size: 15px;
     }
-
     p {
         font-size: 10px;
     }
